--- a/App/.vscode/launch.json
+++ b/App/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/bin/Debug/net6.0/UserApi.dll",
+      "program": "${workspaceFolder}/bin/Debug/net6.0/if3250_2022_19_filantropi_backend.dll",
       "args": [],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
