--- a/App/.vscode/tasks.json
+++ b/App/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/UserApi.csproj",
+        "${workspaceFolder}/if3250_2022_19_filantropi_backend.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -19,7 +19,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/UserApi.csproj",
+        "${workspaceFolder}/if3250_2022_19_filantropi_backend.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -33,7 +33,7 @@
         "watch",
         "run",
         "--project",
-        "${workspaceFolder}/UserApi.csproj"
+        "${workspaceFolder}/if3250_2022_19_filantropi_backend.csproj"
       ],
       "problemMatcher": "$msCompile"
     }
