--- a/App/Properties/launchSettings.json
+++ b/App/Properties/launchSettings.json
@@ -19,6 +19,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
