--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\App\App.csproj" />
+    <ProjectReference Include="..\App\if3250_2022_19_filantropi_backend.csproj" />
   </ItemGroup>
 
 </Project>
